--- a/index.html
+++ b/index.html
@@ -242,13 +242,16 @@ footer{
 <div class="card-animated">
   <i class="fa-solid fa-car fa-3x text-danger"></i>
   <h3 class="mt-3">Veículos Restritos</h3>
-  <p>Proibido modificar veículos do governo, viaturas e serviços públicos.</p>
+  <p>É terminantemente proibido realizar qualquer tipo de modificação
+      em veículos governamentais, viaturas policiais, ambulâncias ou
+      veículos de serviços públicos.</p>
 </div>
 
 <div class="card-animated">
   <i class="fa-solid fa-coins fa-3x text-warning"></i>
   <h3 class="mt-3">Valores da Tabela</h3>
-  <p>Todos os serviços devem seguir rigorosamente a tabela oficial.</p>
+  <p>Todos os serviços prestados devem seguir rigorosamente a tabela
+      oficial da mecânica. Cobranças indevidas resultarão em punições.</p>
 </div>
 </section>
 
@@ -275,8 +278,9 @@ footer{
 
 </main>
 
+<!-- FOOTER -->
 <footer class="text-center py-4">
-© <span id="year"></span> Deboxe Customs
+© <span id="year"></span> Deboxe Customs — Todos os direitos reservados
 </footer>
 
 <!-- SEGURANÇA -->
@@ -295,3 +299,4 @@ document.getElementById("year").textContent=new Date().getFullYear();
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
