--- a/index.html
+++ b/index.html
@@ -264,13 +264,19 @@ footer{
   </div>
   <div class="col-md-6">
     <p>
-      A <strong>Deboxe Customs</strong> é referência em mecânica na cidade,
-      oferecendo serviços de alto nível, respeitando as regras
-      e mantendo a qualidade do roleplay.
+      A <strong>Deboxe Customs</strong> é uma mecânica referência dentro da
+      Central RP, reconhecida pela seriedade, organização e alto padrão
+      de atendimento.
     </p>
     <p>
-      Trabalhamos com profissionalismo, organização
-      e compromisso com a experiência de todos.
+      Trabalhamos com consertos, tunagem, personalização e manutenção
+      completa de veículos, sempre respeitando as regras da cidade e
+      prezando pelo roleplay de qualidade.
+    </p>
+    <p>
+      Nosso objetivo é entregar um serviço profissional, justo e
+      transparente, garantindo a satisfação dos clientes e o bom
+      funcionamento da economia do servidor.
     </p>
   </div>
 </div>
@@ -299,4 +305,5 @@ document.getElementById("year").textContent=new Date().getFullYear();
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
