--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@ footer{
     <div class="logo">Deboxe Customs</div>
   </div>
   <nav class="d-none d-md-flex align-items-center nav-links">
-    <a href="#">Início</a>
-    <a href="#cursos">Cursos</a>
-    <a href="#regras">Regras</a>
-    <a href="#" class="discord-btn"><i class="fa-brands fa-discord"></i> Discord</a>
+    <a href="index.html">Início</a>
+    <a href="tabela.html">Preços</a>
+    <a href="Funcionarios">Funcionarios</a>
+    <a href="https://discord.gg/Z72tjMRmUX" class="discord-btn"><i class="fa-brands fa-discord"></i> Discord</a>
   </nav>
 </div>
 </header>
@@ -305,5 +305,6 @@ document.getElementById("year").textContent=new Date().getFullYear();
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
