--- a/tabela.html
+++ b/tabela.html
@@ -157,7 +157,7 @@ th{background:#f1f1f1}
   <div class="container container-max d-flex justify-content-between align-items-center">
 
     <div class="logo-area">
-      <img src="https://imgur.com/0iskhD3.png">
+      <img src="https://imgur.com/Nw9g2Q2.png">
       <div class="logo-text">Central Race</div>
     </div>
 
@@ -298,6 +298,7 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
 
 
