--- a/tabela.html
+++ b/tabela.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Central Race - Tabela de Serviços</title>
+<title>Deboxe Customs - Tabela de Serviços</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://kit.fontawesome.com/a2d9b1d7a1.js" crossorigin="anonymous"></script>
@@ -158,7 +158,7 @@ th{background:#f1f1f1}
 
     <div class="logo-area">
       <img src="https://imgur.com/Nw9g2Q2.png">
-      <div class="logo-text">Central Race</div>
+      <div class="logo-text">Deboxe Customs</div>
     </div>
 
     <nav class="nav-links d-flex align-items-center">
@@ -275,7 +275,7 @@ th{background:#f1f1f1}
 </main>
 
 <footer class="text-center text-muted mt-4 mb-3">
-© <span id="year"></span> Central Race - Direitos Reservados.
+© <span id="year"></span> Deboxe Customs - Direitos Reservados.
 </footer>
 
 <script>
@@ -298,6 +298,7 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
 
 
