--- a/tabela.html
+++ b/tabela.html
@@ -5,84 +5,78 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Deboxe Customs - Tabela de Serviços</title>
 
+<link rel="icon" href="https://imgur.com/Nw9g2Q2.png">
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://kit.fontawesome.com/a2d9b1d7a1.js" crossorigin="anonymous"></script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
 :root{
+  --vermelho:#e10600;
+  --dourado:#ffcc00;
+  --preto:#111;
+
   --bg:#f7f9fb;
-  --menu-grad: linear-gradient(90deg,#000000,#1a0000,#000000);
-  --red:#ff0000;
-  --orange-grad: linear-gradient(135deg,#ff7a00,#ffb300);
 }
 
 body{
-  font-family:Inter,sans-serif;
+  font-family:'Inter',sans-serif;
   background:var(--bg);
-  user-select:none;
+  color:#111;
   margin:0;
+  user-select:none;
 }
 
-/* ===== MENU ===== */
+/* ===== MENU ORIGINAL ===== */
 .topbar{
-  background:var(--menu-grad);
+  background:linear-gradient(90deg,#000,#1a0000,#000);
+  border-bottom:3px solid var(--vermelho);
   padding:14px 0;
-  position:relative;
 }
 
-.topbar::after{
-  content:"";
-  position:absolute;
-  bottom:0;
-  left:0;
-  width:100%;
-  height:2px;
-  background:var(--red);
-}
-
-.logo-area{
-  display:flex;
-  align-items:center;
-  gap:12px;
-}
-
-.logo-area img{
-  height:48px;
-}
-
-.logo-text{
-  font-weight:700;
-  font-size:18px;
-  color:#ff7a00;
+.logo{
+  font-weight:800;
+  font-size:1.3rem;
+  background:linear-gradient(135deg,var(--vermelho),var(--dourado));
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
 }
 
 .nav-links a{
   color:#fff;
-  text-decoration:none;
+  margin-left:20px;
   font-weight:600;
-  margin-left:22px;
+  text-decoration:none;
+  position:relative;
 }
 
-.nav-links a:hover{
-  color:#ffb300;
+.nav-links a::after{
+  content:"";
+  position:absolute;
+  bottom:-6px;
+  left:0;
+  width:0;
+  height:2px;
+  background:linear-gradient(90deg,var(--vermelho),var(--dourado));
+  transition:.3s;
 }
 
-.btn-discord{
-  margin-left:22px;
-  padding:8px 18px;
+.nav-links a:hover::after{
+  width:100%;
+}
+
+.discord-btn{
+  margin-left:25px;
+  padding:8px 16px;
   border-radius:14px;
   font-weight:700;
-  color:#fff;
+  background:linear-gradient(135deg,var(--vermelho),var(--dourado));
+  color:#000;
   text-decoration:none;
-  background:var(--orange-grad);
 }
 
-.btn-discord:hover{
-  filter:brightness(1.1);
-}
-
-/* ===== CONTEÚDO ===== */
+/* ===== CONTEÚDO ORIGINAL ===== */
 .container-max{max-width:1200px}
 
 .card-gradient{
@@ -151,27 +145,6 @@ th{background:#f1f1f1}
 </head>
 
 <body>
-
-<!-- MENU IGUAL AO DA IMAGEM -->
-<header class="topbar">
-  <div class="container container-max d-flex justify-content-between align-items-center">
-
-    <div class="logo-area">
-      <img src="https://imgur.com/Nw9g2Q2.png">
-      <div class="logo-text">Deboxe Customs</div>
-    </div>
-
-    <nav class="nav-links d-flex align-items-center">
-      <a href="index.html">Início</a>
-      <a href="#">Preços</a>
-      <a href="funcionarios.html">Funcionários</a>
-      <a href="https://discord.gg/" target="_blank" class="btn-discord">
-        Discord
-      </a>
-    </nav>
-
-  </div>
-</header>
 
 <main class="container container-max">
 
@@ -298,6 +271,7 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
 
 
