--- a/tabela.html
+++ b/tabela.html
@@ -146,6 +146,25 @@ th{background:#f1f1f1}
 
 <body>
 
+<!-- MENU ORIGINAL APLICADO -->
+<header class="topbar">
+  <div class="container d-flex justify-content-between align-items-center">
+    <div class="d-flex align-items-center gap-3">
+      <img src="https://imgur.com/Nw9g2Q2.png" height="80">
+      <div class="logo">Deboxe Customs</div>
+    </div>
+
+    <nav class="d-none d-md-flex align-items-center nav-links">
+      <a href="index.html">Início</a>
+      <a href="#">Preços</a>
+      <a href="funcionarios.html">Funcionários</a>
+      <a href="https://discord.gg/" class="discord-btn">
+        <i class="fa-brands fa-discord"></i> Discord
+      </a>
+    </nav>
+  </div>
+</header>
+
 <main class="container container-max">
 
 <section class="text-center py-4">
@@ -271,6 +290,7 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
 
 
