--- a/funcionarios.html
+++ b/funcionarios.html
@@ -3,37 +3,146 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Deboxe Customs - Tabela de Serviços</title>
 
-<title>Central Race - Funcionários</title>
-<link rel="icon" href="https://imgur.com/0iskhD3.png">
+<link rel="icon" href="https://imgur.com/Nw9g2Q2.png">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/a2d9b1d7a1.js" crossorigin="anonymous"></script>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
-body{
-  font-family:Inter,sans-serif;
-  background:#f4f4f4;
+:root{
+  --vermelho:#e10600;
+  --dourado:#ffcc00;
+  --preto:#111;
+
+  --bg:#f7f9fb;
 }
 
-/* TOPBAR */
+body{
+  font-family:'Inter',sans-serif;
+  background:var(--bg);
+  color:#111;
+  margin:0;
+  user-select:none;
+}
+
+/* ===== MENU ORIGINAL ===== */
 .topbar{
-  background:#2b2f33;
-  color:#fff;
+  background:linear-gradient(90deg,#000,#1a0000,#000);
+  border-bottom:3px solid var(--vermelho);
   padding:14px 0;
 }
+
 .logo{
-  font-weight:700;
-  font-size:18px;
+  font-weight:800;
+  font-size:1.3rem;
+  background:linear-gradient(135deg,var(--vermelho),var(--dourado));
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
 }
+
 .nav-links a{
   color:#fff;
-  text-decoration:none;
-  margin-left:18px;
+  margin-left:20px;
   font-weight:600;
+  text-decoration:none;
+  position:relative;
 }
-.nav-links a:hover{color:#cfcfcf}
+
+.nav-links a::after{
+  content:"";
+  position:absolute;
+  bottom:-6px;
+  left:0;
+  width:0;
+  height:2px;
+  background:linear-gradient(90deg,var(--vermelho),var(--dourado));
+  transition:.3s;
+}
+
+.nav-links a:hover::after{
+  width:100%;
+}
+
+.discord-btn{
+  margin-left:25px;
+  padding:8px 16px;
+  border-radius:14px;
+  font-weight:700;
+  background:linear-gradient(135deg,var(--vermelho),var(--dourado));
+  color:#000;
+  text-decoration:none;
+}
+
+/* ===== CONTEÚDO ORIGINAL ===== */
+.container-max{max-width:1200px}
+
+.card-gradient{
+  background:#fff;
+  border-radius:16px;
+  margin-top:20px
+}
+
+.card-header-gradient{
+  padding:26px;
+  color:#fff;
+  text-align:center;
+  border-radius:16px 16px 0 0;
+}
+
+.service-columns{
+  display:flex;
+  flex-wrap:wrap;
+  gap:20px;
+  padding:20px
+}
+
+.service-column{
+  flex:1;
+  min-width:320px
+}
+
+.subtitulo{
+  background:#e0e0e0;
+  padding:8px;
+  font-weight:700;
+  text-align:center;
+  border-radius:6px
+}
+
+table{
+  width:100%;
+  border-collapse:collapse;
+  margin-top:10px
+}
+
+th,td{
+  border:1px solid #ddd;
+  padding:10px
+}
+
+th{background:#f1f1f1}
+
+.price-sem{
+  color:#d13b3b;
+  font-weight:700
+}
+
+.conserto-img{
+  width:100%;
+  max-width:420px;
+  border-radius:14px;
+  margin:10px auto;
+  display:block
+}
+
+@media(max-width:768px){
+  table{min-width:520px}
+}
+</style>
+</head>
 
 /* TITULOS */
 .subtitulo{
@@ -107,19 +216,26 @@ body{
 
 <body>
 
+
+<!-- MENU ORIGINAL APLICADO -->
 <header class="topbar">
   <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
-      <img src="https://imgur.com/0iskhD3.png" style="height:60px;border-radius:8px" draggable="false">
-      <div class="logo">Central Race</div>
+      <img src="https://imgur.com/Nw9g2Q2.png" height="80">
+      <div class="logo">Deboxe Customs</div>
     </div>
+
     <nav class="d-none d-md-flex align-items-center nav-links">
       <a href="index.html">Início</a>
-      <a href="tabela.html">Preços</a>
+      <a href="#">Preços</a>
       <a href="funcionarios.html">Funcionários</a>
+      <a href="https://discord.gg/" class="discord-btn">
+        <i class="fa-brands fa-discord"></i> Discord
+      </a>
     </nav>
   </div>
 </header>
+
 
 <main class="container my-5">
   <h2 class="text-center mb-4">Nossa Equipe</h2>
@@ -373,5 +489,6 @@ document.addEventListener("keydown",e=>{
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
