--- a/funcionarios.html
+++ b/funcionarios.html
@@ -143,6 +143,7 @@ th{background:#f1f1f1}
 }
 </style>
 </head>
+<body>
 
 /* TITULOS */
 .subtitulo{
@@ -489,6 +490,7 @@ document.addEventListener("keydown",e=>{
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
