--- a/funcionarios.html
+++ b/funcionarios.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Deboxe Customs - Tabela de Serviços</title>
+<title>Deboxe Customs - Funcionários</title>
 
 <link rel="icon" href="https://imgur.com/Nw9g2Q2.png">
 
@@ -16,7 +16,6 @@
   --vermelho:#e10600;
   --dourado:#ffcc00;
   --preto:#111;
-
   --bg:#f7f9fb;
 }
 
@@ -28,13 +27,12 @@ body{
   user-select:none;
 }
 
-/* ===== MENU ORIGINAL ===== */
+/* ===== MENU ===== */
 .topbar{
   background:linear-gradient(90deg,#000,#1a0000,#000);
   border-bottom:3px solid var(--vermelho);
   padding:14px 0;
 }
-
 .logo{
   font-weight:800;
   font-size:1.3rem;
@@ -42,7 +40,6 @@ body{
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
 }
-
 .nav-links a{
   color:#fff;
   margin-left:20px;
@@ -50,7 +47,6 @@ body{
   text-decoration:none;
   position:relative;
 }
-
 .nav-links a::after{
   content:"";
   position:absolute;
@@ -61,11 +57,7 @@ body{
   background:linear-gradient(90deg,var(--vermelho),var(--dourado));
   transition:.3s;
 }
-
-.nav-links a:hover::after{
-  width:100%;
-}
-
+.nav-links a:hover::after{width:100%}
 .discord-btn{
   margin-left:25px;
   padding:8px 16px;
@@ -76,106 +68,30 @@ body{
   text-decoration:none;
 }
 
-/* ===== CONTEÚDO ORIGINAL ===== */
-.container-max{max-width:1200px}
-
-.card-gradient{
-  background:#fff;
-  border-radius:16px;
-  margin-top:20px
-}
-
-.card-header-gradient{
-  padding:26px;
-  color:#fff;
-  text-align:center;
-  border-radius:16px 16px 0 0;
-}
-
-.service-columns{
-  display:flex;
-  flex-wrap:wrap;
-  gap:20px;
-  padding:20px
-}
-
-.service-column{
-  flex:1;
-  min-width:320px
-}
-
-.subtitulo{
-  background:#e0e0e0;
-  padding:8px;
-  font-weight:700;
-  text-align:center;
-  border-radius:6px
-}
-
-table{
-  width:100%;
-  border-collapse:collapse;
-  margin-top:10px
-}
-
-th,td{
-  border:1px solid #ddd;
-  padding:10px
-}
-
-th{background:#f1f1f1}
-
-.price-sem{
-  color:#d13b3b;
-  font-weight:700
-}
-
-.conserto-img{
-  width:100%;
-  max-width:420px;
-  border-radius:14px;
-  margin:10px auto;
-  display:block
-}
-
-@media(max-width:768px){
-  table{min-width:520px}
-}
-</style>
-</head>
-<body>
-
-/* TITULOS */
+/* ===== FUNCIONÁRIOS ===== */
 .subtitulo{
   background:#ddd;
   text-align:center;
   font-weight:700;
   padding:6px;
   margin:30px 0 15px;
+  border-radius:6px;
 }
 
-/* CARD */
 .card-employee{
   border-radius:16px;
   overflow:hidden;
   position:relative;
-  width:100%;
   max-width:260px;
 }
 
-/* IMAGEM */
 .card-employee img{
   width:100%;
   height:180px;
   object-fit:cover;
-  object-position:50% 30%;
-  display:block;
-  margin:auto;
   pointer-events:none;
-  user-select:none;
 }
 
-/* REMOVER */
 .btn-remover{
   position:absolute;
   top:8px;
@@ -192,7 +108,7 @@ th{background:#f1f1f1}
 }
 .gerencia-mode .btn-remover{display:block}
 
-/* ADMIN */
+/* ===== ADMIN ===== */
 .admin-btn{
   position:fixed;
   right:20px;
@@ -217,8 +133,6 @@ th{background:#f1f1f1}
 
 <body>
 
-
-<!-- MENU ORIGINAL APLICADO -->
 <header class="topbar">
   <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
@@ -490,6 +404,7 @@ document.addEventListener("keydown",e=>{
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
