--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ footer{
   <nav class="d-none d-md-flex align-items-center nav-links">
     <a href="index.html">Início</a>
     <a href="tabela.html">Preços</a>
-    <a href="funcionario.html">Funcionarios</a>
+    <a href="funcionarios.html">Funcionarios</a>
     <a href="https://discord.gg/Z72tjMRmUX" class="discord-btn"><i class="fa-brands fa-discord"></i> Discord</a>
   </nav>
 </div>
@@ -305,6 +305,7 @@ document.getElementById("year").textContent=new Date().getFullYear();
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
