--- a/tabela.html
+++ b/tabela.html
@@ -156,7 +156,11 @@ th{background:#f1f1f1}
 
     <nav class="d-none d-md-flex align-items-center nav-links">
       <a href="index.html">Início</a>
-      <a href="#">Preços</a>
+      <div class="dropdown">
+            <span class="dropdown-toggle">Preços</span>
+            <div class="dropdown-menu">
+                <a href="calculadora.html">Calculadora</a>
+            </div>
       <a href="funcionarios.html">Funcionários</a>
       <a href="https://discord.gg/" class="discord-btn">
         <i class="fa-brands fa-discord"></i> Discord
@@ -290,6 +294,7 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
 
 
