--- a/tabela.html
+++ b/tabela.html
@@ -146,28 +146,34 @@ th{background:#f1f1f1}
 
 <body>
 
-<!-- MENU ORIGINAL APLICADO -->
-<header class="topbar">
-  <div class="container d-flex justify-content-between align-items-center">
-    <div class="d-flex align-items-center gap-3">
-      <img src="https://imgur.com/Nw9g2Q2.png" height="80">
-      <div class="logo">Deboxe Customs</div>
-    </div>
+<nav class="d-none d-md-flex align-items-center nav-links">
 
-    <nav class="d-none d-md-flex align-items-center nav-links">
-      <a href="index.html">Início</a>
-      <div class="dropdown">
-            <span class="dropdown-toggle">Preços</span>
-            <div class="dropdown-menu">
-                <a href="calculadora.html">Calculadora</a>
-            </div>
-      <a href="funcionarios.html">Funcionários</a>
-      <a href="https://discord.gg/" class="discord-btn">
-        <i class="fa-brands fa-discord"></i> Discord
-      </a>
-    </nav>
+  <a href="index.html">Início</a>
+
+  <!-- PREÇOS -->
+  <div class="menu-dropdown">
+    <a href="#">Preços ▾</a>
+    <div class="dropdown-content">
+      <a href="precos-servicos.html">Serviços</a>
+      <a href="precos-pacotes.html">Pacotes</a>
+    </div>
   </div>
-</header>
+
+  <!-- RELATÓRIO -->
+  <div class="menu-dropdown">
+    <a href="#">Relatório ▾</a>
+    <div class="dropdown-content">
+      <a href="relatorio-reparo.html">Relatório Reparo</a>
+    </div>
+  </div>
+
+  <a href="funcionarios.html">Funcionários</a>
+
+  <a href="https://discord.gg/" class="discord-btn">
+    <i class="fa-brands fa-discord"></i> Discord
+  </a>
+
+</nav>
 
 <main class="container container-max">
 
@@ -294,6 +300,7 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
 
 
