--- a/tabela.html
+++ b/tabela.html
@@ -19,9 +19,11 @@
 
   --bg:#f7f9fb;
 }
-/* ===== SUBMENU ===== */
+/* ===== SUBMENU HOVER ===== */
 .menu-dropdown{
   position:relative;
+  display:flex;
+  align-items:center;
   margin-left:20px;
 }
 
@@ -29,24 +31,27 @@
   color:#fff;
   font-weight:600;
   text-decoration:none;
+  padding:8px 6px;
 }
 
+/* submenu */
 .dropdown-content{
   position:absolute;
-  top:130%;
+  top:100%;
   left:0;
   background:#000;
   border-radius:12px;
   min-width:200px;
-  padding:10px 0;
+  padding:8px 0;
   opacity:0;
-  pointer-events:none;
-  transform:translateY(10px);
+  visibility:hidden;
+  transform:translateY(8px);
   transition:.25s ease;
-  box-shadow:0 10px 25px rgba(0,0,0,.4);
+  box-shadow:0 12px 30px rgba(0,0,0,.45);
   z-index:999;
 }
 
+/* links internos */
 .dropdown-content a{
   display:block;
   padding:10px 18px;
@@ -56,22 +61,18 @@
   white-space:nowrap;
 }
 
+/* hover item */
 .dropdown-content a:hover{
   background:linear-gradient(90deg,var(--vermelho),var(--dourado));
   color:#000;
 }
 
-.menu-dropdown:hover .dropdown-content{
+/* 🔥 ABRE NO HOVER (SEM CLICK) */
+.menu-dropdown:hover .dropdown-content,
+.menu-dropdown:focus-within .dropdown-content{
   opacity:1;
-  pointer-events:auto;
+  visibility:visible;
   transform:translateY(0);
-}
-body{
-  font-family:'Inter',sans-serif;
-  background:var(--bg);
-  color:#111;
-  margin:0;
-  user-select:none;
 }
 
 /* ===== MENU ORIGINAL ===== */
@@ -357,6 +358,7 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
 
 
