--- a/tabela.html
+++ b/tabela.html
@@ -19,39 +19,38 @@
 
   --bg:#f7f9fb;
 }
-/* ===== SUBMENU HOVER ===== */
+/* ===== SUBMENU SEM AUMENTAR ALTURA ===== */
 .menu-dropdown{
   position:relative;
-  display:flex;
-  align-items:center;
-  margin-left:20px;
+  display:inline-block; /* 🔑 mantém altura original */
 }
 
 .menu-dropdown > a{
   color:#fff;
+  margin-left:20px;      /* igual aos outros links */
   font-weight:600;
   text-decoration:none;
-  padding:8px 6px;
+  position:relative;
 }
 
 /* submenu */
 .dropdown-content{
   position:absolute;
-  top:100%;
+  top:calc(100% + 8px);  /* não empurra o menu */
   left:0;
   background:#000;
   border-radius:12px;
-  min-width:200px;
+  min-width:190px;
   padding:8px 0;
   opacity:0;
   visibility:hidden;
-  transform:translateY(8px);
+  transform:translateY(6px);
   transition:.25s ease;
   box-shadow:0 12px 30px rgba(0,0,0,.45);
   z-index:999;
 }
 
-/* links internos */
+/* itens */
 .dropdown-content a{
   display:block;
   padding:10px 18px;
@@ -67,9 +66,8 @@
   color:#000;
 }
 
-/* 🔥 ABRE NO HOVER (SEM CLICK) */
-.menu-dropdown:hover .dropdown-content,
-.menu-dropdown:focus-within .dropdown-content{
+/* abre no hover */
+.menu-dropdown:hover .dropdown-content{
   opacity:1;
   visibility:visible;
   transform:translateY(0);
@@ -358,6 +356,7 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
 
 
