--- a/tabela.html
+++ b/tabela.html
@@ -205,10 +205,9 @@ th{background:#f1f1f1}
 
       <!-- PREÇOS -->
       <div class="menu-dropdown">
-        <a href="#">Preços ▾</a>
+        <a href="tabela.html">Preços ▾</a>
         <div class="dropdown-content">
-          <a href="precos-servicos.html">Serviços</a>
-          <a href="precos-pacotes.html">Pacotes</a>
+          <a href="calculadora.html">Calculadora</a>
         </div>
       </div>
 
@@ -216,7 +215,7 @@ th{background:#f1f1f1}
       <div class="menu-dropdown">
         <a href="#">Relatório ▾</a>
         <div class="dropdown-content">
-          <a href="relatorio-reparo.html">Relatório Reparo</a>
+          <a href="reparo.html">Relatório Reparo</a>
         </div>
       </div>
 
@@ -356,6 +355,7 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
 
 
