--- a/calculadora.html
+++ b/calculadora.html
@@ -3,70 +3,216 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Deboxe Customs - Relatório Profissional</title>
+<title>Deboxe Customs - Tabela de Serviços</title>
 
+<link rel="icon" href="https://imgur.com/Nw9g2Q2.png">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/a2d9b1d7a1.js" crossorigin="anonymous"></script>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
+:root{
+  --vermelho:#e10600;
+  --dourado:#ffcc00;
+  --bg:#f7f9fb;
+}
+
 body{
-  background:#f7f7f7;
-  font-family:Inter,sans-serif;
+  font-family:'Inter',sans-serif;
+  background:var(--bg);
+  color:#111;
+  margin:0;
+  user-select:none;
   padding-top:90px;
 }
+
+/* ===== MENU ===== */
 .topbar{
-  background:#2b2f33;
-  color:#fff;
-  padding:12px 0;
+  background:linear-gradient(90deg,#000,#1a0000,#000);
+  border-bottom:3px solid var(--vermelho);
+  padding:14px 0;
   position:fixed;
   top:0;
   width:100%;
   z-index:1000;
 }
-.logo{font-weight:700}
+
+.logo{
+  font-weight:800;
+  font-size:1.3rem;
+  background:linear-gradient(135deg,var(--vermelho),var(--dourado));
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+}
+
 .nav-links a{
   color:#fff;
-  margin-left:18px;
-  text-decoration:none;
+  margin-left:20px;
   font-weight:600;
+  text-decoration:none;
+  position:relative;
 }
-.nav-links a:hover{color:#cfcfcf}
-.card{
+
+.nav-links a::after{
+  content:"";
+  position:absolute;
+  bottom:-6px;
+  left:0;
+  width:0;
+  height:2px;
+  background:linear-gradient(90deg,var(--vermelho),var(--dourado));
+  transition:.3s;
+}
+
+.nav-links a:hover::after{
+  width:100%;
+}
+
+.discord-btn{
+  margin-left:25px;
+  padding:8px 16px;
   border-radius:14px;
-  box-shadow:0 6px 20px rgba(0,0,0,.15);
-}
-.card-header{
-  text-align:center;
   font-weight:700;
-  background:#f0f0f0;
+  background:linear-gradient(135deg,var(--vermelho),var(--dourado));
+  color:#000;
+  text-decoration:none;
 }
-.calc-container{
+
+/* ===== SUBMENU ===== */
+.menu-dropdown{
+  position:relative;
+  display:inline-block;
+}
+
+.dropdown-content{
+  position:absolute;
+  top:calc(100% + 8px);
+  left:0;
+  background:#000;
+  border-radius:12px;
+  min-width:190px;
+  padding:8px 0;
+  opacity:0;
+  visibility:hidden;
+  transform:translateY(6px);
+  transition:.25s ease;
+  box-shadow:0 12px 30px rgba(0,0,0,.45);
+  z-index:999;
+}
+
+.dropdown-content a{
+  display:block;
+  padding:10px 18px;
+  color:#fff;
+  text-decoration:none;
+  font-weight:500;
+}
+
+.dropdown-content a:hover{
+  background:linear-gradient(90deg,var(--vermelho),var(--dourado));
+  color:#000;
+}
+
+.menu-dropdown:hover .dropdown-content{
+  opacity:1;
+  visibility:visible;
+  transform:translateY(0);
+}
+
+/* ===== CONTEÚDO ===== */
+.container-max{max-width:1200px}
+
+.card-gradient{
   background:#fff;
-  padding:25px;
-  border-radius:14px;
-  box-shadow:0 6px 20px rgba(0,0,0,.2);
+  border-radius:16px;
+  margin-top:20px
 }
-textarea{
-  height:260px;
-  font-family:monospace;
+
+.card-header-gradient{
+  padding:26px;
+  color:#fff;
+  text-align:center;
+  border-radius:16px 16px 0 0;
+}
+
+.service-columns{
+  display:flex;
+  flex-wrap:wrap;
+  gap:20px;
+  padding:20px
+}
+
+.service-column{
+  flex:1;
+  min-width:320px
+}
+
+.subtitulo{
+  background:#e0e0e0;
+  padding:8px;
+  font-weight:700;
+  text-align:center;
+  border-radius:6px
+}
+
+table{
+  width:100%;
+  border-collapse:collapse;
+  margin-top:10px
+}
+
+th,td{
+  border:1px solid #ddd;
+  padding:10px
+}
+
+th{background:#f1f1f1}
+
+.price-sem{
+  color:#d13b3b;
+  font-weight:700
 }
 </style>
 </head>
+
 <body>
 
 <!-- MENU -->
 <header class="topbar">
-<div class="container d-flex justify-content-between align-items-center">
-  <div class="d-flex align-items-center gap-3">
-    <img src="https://imgur.com/Nw9g2Q2.png" style="height:60px;border-radius:8px">
-    <div class="logo">Deboxe Customs</div>
+  <div class="container d-flex justify-content-between align-items-center">
+
+    <div class="d-flex align-items-center gap-3">
+      <img src="https://imgur.com/Nw9g2Q2.png" height="65">
+      <div class="logo">Deboxe Customs</div>
+    </div>
+
+    <nav class="d-none d-md-flex align-items-center nav-links">
+
+      <a href="index.html">Início</a>
+
+      <div class="menu-dropdown">
+        <a href="#">Preços</a>
+        <div class="dropdown-content">
+          <a href="tabela.html">Tabela de Serviços</a>
+          <a href="precos-pacotes.html">Pacotes</a>
+        </div>
+      </div>
+
+      <div class="menu-dropdown">
+        <a href="#">Relatório</a>
+        <div class="dropdown-content">
+          <a href="relatorio-reparo.html">Relatório Reparo</a>
+        </div>
+      </div>
+
+      <a href="funcionarios.html">Funcionários</a>
+
+      <a href="https://discord.gg/" class="discord-btn">
+        <i class="fa-brands fa-discord"></i> Discord
+      </a>
+
+    </nav>
   </div>
-  <nav class="nav-links d-none d-md-flex">
-    <a href="index.html">Início</a>
-    <a href="tabela.html">Preços</a>
-    <a href="funcionarios.html">Funcionários</a>
-  </nav>
-</div>
 </header>
 
 <div class="container">
@@ -304,6 +450,7 @@ document.addEventListener("keydown",e=>{
 
 </body>
 </html>
+
 
 
 
