--- a/calculadora.html
+++ b/calculadora.html
@@ -186,33 +186,19 @@ th{background:#f1f1f1}
       <div class="logo">Deboxe Customs</div>
     </div>
 
-    <nav class="d-none d-md-flex align-items-center nav-links">
-
-      <a href="index.html">Início</a>
-
-      <div class="menu-dropdown">
-        <a href="#">Preços</a>
-        <div class="dropdown-content">
-          <a href="tabela.html">Tabela de Serviços</a>
-          <a href="precos-pacotes.html">Pacotes</a>
-        </div>
-      </div>
-
-      <div class="menu-dropdown">
-        <a href="#">Relatório</a>
-        <div class="dropdown-content">
-          <a href="relatorio-reparo.html">Relatório Reparo</a>
-        </div>
-      </div>
-
-      <a href="funcionarios.html">Funcionários</a>
-
-      <a href="https://discord.gg/" class="discord-btn">
-        <i class="fa-brands fa-discord"></i> Discord
-      </a>
-
-    </nav>
+   <header class="topbar">
+<div class="container d-flex justify-content-between align-items-center">
+  <div class="d-flex align-items-center gap-3">
+    <img src="https://imgur.com/Nw9g2Q2.png" height="80">
+    <div class="logo">Deboxe Customs</div>
   </div>
+  <nav class="d-none d-md-flex align-items-center nav-links">
+    <a href="index.html">Início</a>
+    <a href="tabela.html">Preços</a>
+    <a href="funcionarios.html">Funcionarios</a>
+    <a href="https://discord.gg/Z72tjMRmUX" class="discord-btn"><i class="fa-brands fa-discord"></i> Discord</a>
+  </nav>
+</div>
 </header>
 
 <div class="container">
@@ -450,6 +436,7 @@ document.addEventListener("keydown",e=>{
 
 </body>
 </html>
+
 
 
 
