--- a/reparo.html
+++ b/reparo.html
@@ -3,86 +3,195 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Central Race - RELATÓRIO DO REPARO - MECÂNICA</title>
+<title>Deboxe Customs - Relatorio de Reparo</title>
 
-<link rel="icon" type="image/x-icon" href="https://imgur.com/0iskhD3.png">
+<link rel="icon" href="https://imgur.com/Nw9g2Q2.png">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://kit.fontawesome.com/a2d9b1d7a1.js" crossorigin="anonymous"></script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
-*{
-  user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
+:root{
+  --vermelho:#e10600;
+  --dourado:#ffcc00;
+  --bg:#f7f9fb;
 }
-body{font-family:Inter,system-ui;background:#f7f7f7;color:#222}
-.topbar{background:#2b2f33;color:#fff;padding:12px 0}
-.logo{font-weight:700;letter-spacing:.6px}
+
+body{
+  font-family:'Inter',sans-serif;
+  background:var(--bg);
+  color:#111;
+  margin:0;
+  user-select:none;
+  padding-top:90px;
+}
+
+/* ===== MENU ===== */
+.topbar{
+  background:linear-gradient(90deg,#000,#1a0000,#000);
+  border-bottom:3px solid var(--vermelho);
+  padding:14px 0;
+  position:fixed;
+  top:0;
+  width:100%;
+  z-index:1000;
+}
+
+.logo{
+  font-weight:800;
+  font-size:1.3rem;
+  background:linear-gradient(135deg,var(--vermelho),var(--dourado));
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+}
+
 .nav-links a{
-color:#fff;text-decoration:none;
-margin-left:18px;font-weight:600
+  color:#fff;
+  margin-left:20px;
+  font-weight:600;
+  text-decoration:none;
+  position:relative;
 }
-.nav-links a:hover{color:#cfcfcf}
+
+.nav-links a::after{
+  content:"";
+  position:absolute;
+  bottom:-6px;
+  left:0;
+  width:0;
+  height:2px;
+  background:linear-gradient(90deg,var(--vermelho),var(--dourado));
+  transition:.3s;
+}
+
+.nav-links a:hover::after{
+  width:100%;
+}
+
 .discord-btn{
-display:inline-flex;align-items:center;gap:8px;
-padding:8px 16px;border-radius:12px;
-background:linear-gradient(135deg,#7289da,#99a9f0);
-color:#fff;font-weight:700;text-decoration:none
+  margin-left:25px;
+  padding:8px 16px;
+  border-radius:14px;
+  font-weight:700;
+  background:linear-gradient(135deg,var(--vermelho),var(--dourado));
+  color:#000;
+  text-decoration:none;
 }
-.calc-container{
-background:#fff;
-padding:20px 25px;
-border-radius:12px;
-box-shadow:0 4px 12px rgba(0,0,0,.1);
-max-width:520px;
-margin:40px auto
+
+/* ===== SUBMENU ===== */
+.menu-dropdown{
+  position:relative;
+  display:inline-block;
 }
-label{font-weight:600;margin-top:10px;display:block}
-input,textarea{
-width:100%;padding:8px;margin-top:5px;
-border-radius:6px;border:1px solid #ccc
+
+.dropdown-content{
+  position:absolute;
+  top:calc(100% + 8px);
+  left:0;
+  background:#000;
+  border-radius:12px;
+  min-width:190px;
+  padding:8px 0;
+  opacity:0;
+  visibility:hidden;
+  transform:translateY(6px);
+  transition:.25s ease;
+  box-shadow:0 12px 30px rgba(0,0,0,.45);
+  z-index:999;
 }
-.checkbox-group{
-display:flex;flex-wrap:wrap;gap:10px;margin-top:5px
+
+.dropdown-content a{
+  display:block;
+  padding:10px 18px;
+  color:#fff;
+  text-decoration:none;
+  font-weight:500;
 }
-.checkbox-group label{
-background:#f1f3f5;padding:6px 10px;border-radius:6px
+
+.dropdown-content a:hover{
+  background:linear-gradient(90deg,var(--vermelho),var(--dourado));
+  color:#000;
 }
-button{
-width:100%;padding:10px;margin-top:12px;
-border:none;border-radius:8px;font-weight:700
+
+.menu-dropdown:hover .dropdown-content{
+  opacity:1;
+  visibility:visible;
+  transform:translateY(0);
 }
-.calc-btn{background:#4caf50;color:#fff}
-.discord-send{background:#5865F2;color:#fff}
-.clear-btn{background:#f44336;color:#fff}
-#relatorio{
-height:260px;margin-top:10px;
-font-family:monospace;background:#f8f9fa;
-user-select:none;
--webkit-user-select:none;
--moz-user-select:none;
--ms-user-select:none;
+
+/* ===== CONTEÚDO ===== */
+.container-max{max-width:1200px}
+
+.card-gradient{
+  background:#fff;
+  border-radius:16px;
+  margin-top:20px
+}
+
+.card-header-gradient{
+  padding:26px;
+  color:#fff;
+  text-align:center;
+  border-radius:16px 16px 0 0;
+}
+
+.service-columns{
+  display:flex;
+  flex-wrap:wrap;
+  gap:20px;
+  padding:20px
+}
+
+.service-column{
+  flex:1;
+  min-width:320px
+}
+
+.subtitulo{
+  background:#e0e0e0;
+  padding:8px;
+  font-weight:700;
+  text-align:center;
+  border-radius:6px
+}
+
+table{
+  width:100%;
+  border-collapse:collapse;
+  margin-top:10px
+}
+
+th,td{
+  border:1px solid #ddd;
+  padding:10px
+}
+
+th{background:#f1f1f1}
+
+.price-sem{
+  color:#d13b3b;
+  font-weight:700
 }
 </style>
 </head>
 
 <body>
 
+<!-- MENU -->
 <header class="topbar">
-<div class="container d-flex justify-content-between align-items-center">
-<div class="d-flex align-items-center gap-3">
-<img src="https://imgur.com/0iskhD3.png" style="height:70px;border-radius:8px">
-<div class="logo">Central Race</div>
-</div>
+  <div class="container d-flex justify-content-between align-items-center">
 
-<nav class="d-none d-md-flex align-items-center nav-links">
-<a href="index.html">Início</a>
-<a href="tabela.html">Preços</a>
-<a href="funcionarios.html">Funcionários</a>
-</a>
-</nav>
+    <div class="d-flex align-items-center gap-3">
+      <img src="https://imgur.com/Nw9g2Q2.png" height="65">
+      <div class="logo">Deboxe Customs</div>
+    </div>
+    
+  <nav class="d-none d-md-flex align-items-center nav-links">
+    <a href="index.html">Início</a>
+    <a href="tabela.html">Preços</a>
+    <a href="funcionarios.html">Funcionarios</a>
+    <a href="https://discord.gg/Z72tjMRmUX" class="discord-btn"><i class="fa-brands fa-discord"></i> Discord</a>
+  </nav>
 </div>
 </header>
 
@@ -214,6 +323,7 @@ function limpar(){
 
 </body>
 </html>
+
 
 
 
