--- a/reparo.html
+++ b/reparo.html
@@ -327,22 +327,76 @@ document.addEventListener('keydown', function(e) {
 });
 document.addEventListener('dragstart', e => e.preventDefault());
 
+// Função para validar campos
+function validarCampos(nome, id, cliente) {
+  const nomeRegex = /^[A-Za-zÀ-ú ]+$/;
+  const idRegex = /^[0-9]+$/;
+
+  if (!nome || !id || !cliente) {
+    alert("Preencha todos os campos obrigatórios!");
+    return false;
+  }
+  if (!nomeRegex.test(nome)) {
+    alert("Nome deve conter apenas letras e espaços!");
+    return false;
+  }
+  if (!idRegex.test(id) || !idRegex.test(cliente)) {
+    alert("ID Mecânico e ID Cliente devem conter apenas números!");
+    return false;
+  }
+  return true;
+}
+
+// Controle de tentativas com bloqueio de 1 hora usando localStorage
+function verificarBloqueio() {
+  const bloqueio = JSON.parse(localStorage.getItem("bloqueioRelatorio")) || null;
+  if (bloqueio) {
+    const agora = new Date().getTime();
+    if (agora < bloqueio) {
+      const minutos = Math.ceil((bloqueio - agora) / 60000);
+      alert(`Você atingiu o limite de tentativas. Tente novamente em ${minutos} minuto(s).`);
+      return true; // bloqueado
+    } else {
+      localStorage.removeItem("bloqueioRelatorio");
+      localStorage.removeItem("tentativasRelatorio");
+      return false;
+    }
+  }
+  return false;
+}
+
 function gerarRelatorio(){
+  if(verificarBloqueio()) return;
+
   const nome = document.getElementById("nome").value.trim();
   const id = document.getElementById("idMec").value.trim();
   const cliente = document.getElementById("idCliente").value.trim();
   const relatorio = document.getElementById("relatorio");
 
+  // Tentativas
+  let tentativas = parseInt(localStorage.getItem("tentativasRelatorio")) || 0;
+
+  if(!validarCampos(nome, id, cliente)) {
+    tentativas++;
+    localStorage.setItem("tentativasRelatorio", tentativas);
+    if(tentativas >= 3){
+      const bloqueio = new Date().getTime() + 60*60*1000; // 1 hora
+      localStorage.setItem("bloqueioRelatorio", bloqueio);
+      alert("Você atingiu o limite de 3 tentativas! Aguarde 1 hora para tentar novamente.");
+    }
+    return;
+  }
+
   const itens = [...document.querySelectorAll("input[type=checkbox]:checked")];
   const isParceria = document.getElementById("parceria").checked;
 
-  if(!nome || !id || !cliente || (itens.length === 0 && !isParceria)){
-    alert("Preencha todos os campos e selecione ao menos um item");
+  if(itens.length === 0 && !isParceria){
+    alert("Selecione ao menos um item ou marque Parceria.");
     return;
   }
 
   let total = 0;
-  let texto = "🛠️ RELATÓRIO Central Race 🛠️\n\n";
+  let texto = "🛠️ RELATÓRIO Deboxe Customs 🛠️\n\n";
 
   itens.forEach(i => {
     if(i.id !== "parceria") total += valores[i.value];
@@ -395,6 +449,8 @@ function limpar(){
   document.querySelectorAll("input").forEach(i => i.value = "");
   document.querySelectorAll("input[type=checkbox]").forEach(i => i.checked = false);
   document.getElementById("relatorio").value = "";
+  localStorage.removeItem("tentativasRelatorio");
+  localStorage.removeItem("bloqueioRelatorio");
 }
 </script>
 
