--- a/reparo.html
+++ b/reparo.html
@@ -238,16 +238,8 @@ footer{
     <nav class="d-none d-md-flex align-items-center nav-links">
       <a href="index.html">Início</a>
       <a href="tabela.html">Preços</a>
-
-      <!-- SUBMENU FUNCIONÁRIOS -->
-      <div class="menu-dropdown">
-        <a href="#">Funcionários</a>
-        <div class="dropdown-content">
-          <a href="funcionarios.html">Lista de Funcionários</a>
-          <a href="relatorio.html">Relatórios</a>
-        </div>
+      <a href="funcionarios.html">Funcionarios</a>
       </div>
-
       <a href="https://discord.gg/Z72tjMRmUX" class="discord-btn">
         <i class="fa-brands fa-discord"></i> Discord
       </a>
@@ -456,3 +448,4 @@ function limpar(){
 
 </body>
 </html>
+
