--- a/funcionarios.html
+++ b/funcionarios.html
@@ -142,7 +142,7 @@ body{
 
     <nav class="d-none d-md-flex align-items-center nav-links">
       <a href="index.html">Início</a>
-      <a href="#">Preços</a>
+      <a href="tabel.html">Preços</a>
       <a href="funcionarios.html">Funcionários</a>
       <a href="https://discord.gg/" class="discord-btn">
         <i class="fa-brands fa-discord"></i> Discord
@@ -404,6 +404,7 @@ document.addEventListener("keydown",e=>{
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
