--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ footer{
 
   <div class="col-md-4 mb-4">
     <div class="card card-service" data-bs-toggle="modal" data-bs-target="#cursoTunning">
-      <img src="https://imgur.com/NnaqrpG.png">
+      <img src="https://imgur.com/F5YDpR4.png">
       <div class="card-body">
         <h5>Tunning de Veículos</h5>
         <p>Performance, estética e personalização.</p>
@@ -305,6 +305,7 @@ document.getElementById("year").textContent=new Date().getFullYear();
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
