--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ footer{
 <button class="btn-close" data-bs-dismiss="modal"></button>
 </div>
 <div class="modal-body modal-video">
-<iframe src="https://youtu.be/PjMW3vXkv84" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/PjMW3vXkv84" allowfullscreen></iframe>
 </div>
 </div>
 </div>
@@ -305,6 +305,7 @@ document.getElementById("year").textContent=new Date().getFullYear();
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
